fixed about page alignment + active members shown

--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -13,21 +13,19 @@
 }
 
 #missonSection {
-    h1 {
-      margin: 0px auto;
-      text-align: center;
-      padding: 0px;
-      padding-top: 10px;
-      font-weight: 600;
-      width: 100%;
-      line-height: 80px;
-      font-size: 36px;
-    }
-    h2 {
-      text-align: center;
-    }
-
-
+  h1 {
+    margin: 0px auto;
+    text-align: center;
+    padding: 0px;
+    padding-top: 10px;
+    font-weight: 600;
+    width: 100%;
+    line-height: 80px;
+    font-size: 36px;
+  }
+  h2 {
+    text-align: center;
+  }
 }
 
 #teamSection {
@@ -44,8 +42,12 @@
   .memberList {
     padding: 0;
     margin: 0;
-    width: 370px;
-    float: left;
+    max-width: 800px;
+
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .teamMember {
@@ -56,16 +58,17 @@
     text-align: left;
     letter-spacing: 2px;
     font-family: "Montserrat", sans-serif;
+    max-width: 346px;
+    flex: 1 0 auto;
   }
 
   .memberImage {
     position: relative;
-    margin-left: 12px;
     width: 170px;
     height: 170px;
     float: left;
     border-radius: 500px;
-    margin-bottom: 12px;
+    margin: 12px;
   }
 
   .memberCardTop {
